--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,7 @@
 
 .link:hover{
   color: #fff;
+  background: #563D7C;
 }
 
 .input{
@@ -126,6 +127,11 @@
   outline: none;
   color: #797979;
   font-size: 19px;
+}
+
+.cart {
+  display: inline;
+  float: right;
 }
 
 .cart > img {
