--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -34,10 +34,24 @@
   .checkout button {
     width: 150px;
     height: 50px;
-    background-color: rgb(19, 19, 19);
-    color: white;
-    border: none;
-    border-radius: 8px;
+    background-color: transparent;
+    border: 2px solid rgb(19, 19, 19);
+    color: black;
+    border-radius: 9px;
     margin: 10px;
     cursor: pointer;
   }
+
+  
+  .checkout button:hover {
+    background-color: #CBBCE2;
+    color: black;
+    cursor: pointer;
+  }
+
+  .checkoutlink {
+    text-decoration: none;
+    color: black;
+    font-size: 15px;
+  }
+
